[package]
name = "rode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4.26", features = ["serde"] }
deadpool-postgres = "0.10.5"
futures = "0.3.28"
refinery = { version = "0.8.10", features = ["tokio-postgres"] }
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"
tokio-postgres = { version = "0.7.8", features = ["with-uuid-1", "with-chrono-0_4"] }

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",
    "fast-rng"
]

